--- a/synthetic/RC_of_chr7_1-3,000,000_inserted_into_chr8_141,138,635-145,138,635.md
+++ b/synthetic/RC_of_chr7_1-3,000,000_inserted_into_chr8_141,138,635-145,138,635.md
@@ -1,4 +1,4 @@
-# Chr7 1 3,000,000  inserted into Chr8 141,138,635-145,138,635
+# Chr7 1-3,000,000  inserted into Chr8 141,138,635-145,138,635
 
 ### Analysis of the genome in which: 
 
@@ -6,7 +6,7 @@ The reverse complement of **chr7 1-3,000,000** is insert in the the region **chr
 
 ### Primary region spanning: chr7 1-3,000,000 
 
-For this analysis the split reads at chr7 1-3,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 1-3,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Translocation___ menu option.<hr />
 
 ![image](images/insert_chr7_1-3,000,000_RC_target_chr8_141,138,635-145,138,635_ONT_no_2nd_pair_1.jpg)
 
@@ -26,7 +26,7 @@ Figure 3
 
 ### Primary region spanning: chr8 141,138,635-145,138,635 
 
-For this analysis the split reads at chr8 141,138,635 and 145,138,635were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 141,138,635 and 145,138,635were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Translocation___ menu option.<hr />
 
 ![image](images/insert_chr7_1-3,000,000_RC_target_chr8_141,138,635-145,138,635_ONT_no_2nd_pair_2.jpg)
 
