--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000-43,700,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000-43,700,000.md
@@ -6,7 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is inserted in the the 
 
 ### Primary region spanning: chr7 43,550,000-43,600,000 
 
-For this analysis the split reads at chr7 43,600,000-43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,600,000 (black line in Figure 1 and 2) and 43,750,000 (blue line in Figure 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,550,000-43,700,000_ONT_no_2nd_1.jpg)
 
@@ -26,7 +26,7 @@ Figure 3
 
 ### Primary region spanning: chr7 43,7-0,000-43,750,000 
 
-For this analysis the reads at chr7 43,550,000 and 43,700,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the reads at chr7 43,550,000 (red line in figure 4 and 5) and 43,700,000 (green line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,550,000-43,700,000_ONT_no_2nd_2.jpg)
 
