--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000-43,800,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000-43,800,000.md
@@ -1,4 +1,4 @@
-# The reverse complement of Chr7 43,600,000-43,750,000  inserted into Chr7 43,550,000
+# The reverse complement of Chr7 43,600,000-43,750,000  inserted into Chr7 43,550,000-43,800,000
 
 ### Analysis of the genome in which: 
 
@@ -6,7 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the re
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,550,000-43,600,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,550,000 (black lines in Figure 1 and 2) and 43,600,000 (blue lines in Figure 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,550,000-43,800,000_ONT_no_2nd_1.jpg)
 
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr7 43,550,000-43,800,000
 
-For this analysis the split reads at chr7 43,750,000 and 43,800,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,750,000 (red line in Figure 4 and  5) and 43,800,000 (green line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,550,000-43,800,000_ONT_no_2nd_2.jpg)
 
