--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
@@ -6,7 +6,8 @@ The region **chr8 43,600,000-43,750,000** is insert in to the region **chr7 43,6
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
-For this analysis the split reads at chr8 43,600,000 (black line in Figure 1 and 2) and 43,750,000 (blue line in Figure 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 43,600,000 (black line in Figure 1 and 2) and 43,750,000 (blue line in Figure 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_2.jpg)
 
