--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,610,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,610,000.md
@@ -6,7 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the re
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,610,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,590,000 and 43,600,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,610,000_ONT_no_2nd_1.jpg)
 
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,600,000 whose secondary alignments mapped to chr7 43,750,000 (see blue line in Figure 4) and 43,600,000 whose secondary reads mapped to chr7 43,610,00 (see black line in Figure 4) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,600,000 whose secondary alignments mapped to chr7 43,750,000 (see red line in Figure 4 and 5) and 43,600,000 whose secondary reads mapped to chr7 43,6100,00 (see green line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,610,000_ONT_no_2nd_2.jpg)
 
