--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,800,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,800,000.md
@@ -6,7 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is inserted in the the 
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,750,000-43,800,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,750,000 and 43,800,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,800,000_ONT_no_2nd_1.jpg)
 
