--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,750,000-43,760,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,750,000-43,760,000.md
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,7500,000 with secondary alignments at 43,760,00 (green line in Figure 4 and 5) and 43,600,000 (black line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,7500,000 with secondary alignments at 43,600,00 (black line in Figure 4 and 5) and 43,760,000 (green line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,750,000-43,760,000_ONT_no_2nd_2.jpg)
 
