--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_50000000-51,000,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_50000000-51,000,000.md
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr8 50,000,000-51,000,000 
 
-For this analysis the split reads at chr8 50,000,000 and 51,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 50,000,000 (black line in Fiugre 4 and 5)and 51,000,000 (green line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_50000000-51,000,000_plus_chr8_60_ONT_no_2nd_2.jpg)
 
